# apex

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.cursor/: mcp.json
.github/workflows/: ci.yml
docs/: README.md  architecture.md  code-execution.md  compatibility.md  configuration.md  flow.md  github-push.md  integration.md  mcp-tools.md  pipeline-steps.md  progress-events.md  repo-context.md  robustness.md  safety.md  skill-apex-verification.md  tool-interface.md  verification.md
src/apex/: __main__.py  adversarial_review.py  constants.py  conventions.py  ensemble.py  inspection_review.py  ledger.py  llm_client.py  llm_interface.py  models.py  orchestrator.py  policy.py  review_pack.py  scoring.py  server.py
tests/: conftest.py  fakes.py  test_artifact_validation.py  test_backend_contract.py  test_cli_main.py  test_config_env.py  test_execution_backend_client.py  test_executor_client.py  test_guard_metadata.py  test_ledger.py  test_ledger_read.py  test_llm_adapter.py  test_llm_client_factory.py  test_llm_user_config.py  test_mcp_diagnostics.py  test_mcp_input_guard.py  test_mcp_run_registry.py  test_mcp_server_wiring.py  test_observability.py  test_openai_chat_client.py  test_orchestrator_behavior.py  test_pipeline_run.py  test_policy.py  test_progress_events.py  test_redaction.py  test_repo_context.py  test_resolve_run_modes.py  test_run_input_pipeline.py  test_runtime_run_limits.py  test_scoring.py  test_step_support.py  test_top_level_errors.py  test_validators.py
tests/eval/: __init__.py  cases.py  test_regression.py
(+60 files in other folders)
