[project]
name = "apex"
version = "0.1.0"
description = "Adversarial Pipeline for Execution eXamination (APEX) MCP orchestrator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "APEX Contributors" }]
dependencies = [
  "httpx",
  "mcp>=1.26.0",
  "pydantic>=2.0",
]

[project.scripts]
apex = "apex.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

